Modifique el index

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <img src="profile.png" alt="">
                 <h3>Mis datos <i class="fa fa-info-circle" aria-hidden="true" style="color:black;"></i></h3>
                 <ul id="mis-datos">
-                    <li>Apellido y nombre: </li>
+                    <li>Apellido y nombre: Pepito </li>
                     <li>Direccion: </li>
                     <li>Edad: </li>
                 </ul>
